--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -117,8 +117,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    #family: Fira Code
-    family: MesloLGS NF
+    family: Ubuntu Mono
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
