--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -5,5 +5,16 @@ Ctrl+Left	no-osd seek -2 exact
 Shift+Right	no-osd seek +60
 Shift+Left	no-osd seek -60
 
-UP		add volume +5
-DOWN		add volume -5
+UP		no-osd add volume +5
+DOWN		no-osd add volume -5
+
+]		add speed +0.1
+[		add speed -0.1
+}		add speed +0.5
+{		add speed -0.5
+\		set speed 1.0
+
+WHEEL_UP	add volume +1
+WHEEL_DOWN	add volume -1
+WHEEL_RIGHT	seek +1
+WHEEL_LEFT	seek -1
