--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,3 +1,7 @@
 backend = "glx";
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
+fading = true;
+fade-in-step = 0.1;
+fade-out-step = 0.1;
+fade-delta = 20;
